2006-02-08 17:08 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleVolume) added to lp solve optimal
	node location by LP tableau.
	* src/tableau.c (tableauInit) fixed array indexing bug that
	read past end of array.
	* src/tableau.c (tableauInit) scaled M by n to make sure that
	the add columns (to create basic feasable solution) are removed.

2006-02-08 17:08 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV) passes test for three tri case

2006-02-08 14:48 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridGaussianBackSolve) added to back solve upper
	diagonal matrices

2006-02-08 14:12 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridGaussianElimination) added to transform
	matrices into upper diagonal form

2006-02-07 16:43 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV) started driver for tableau.

2006-02-07 16:43 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauSolve) working for 3 tri case.

2006-02-07 11:30 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauBasis) return the active basis.

2006-02-07 10:57 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauCreate) brand new empty object as a place
	holder for a tableau linear programming implementation.
	* util/tableau.m a Octave (MATLAB) to spike out a tableau
	implementation
	* util/untangle2.m a Octave (MATLAB) test tableau.m
	
2006-02-04 12:46 Mike Park  <mike.park@nasa.gov>

	* src/layer.c (layerMakeCADAvailable,layerCADAvailable) a toggle
	to declare when cad is available (for projection);
	* src/layer.c (layerAdvance) project new faces when layerCADAvailable.
	
2006-02-04 12:46 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (--inflate) added a spike to demonstrate
	inflating boundary layers.

2006-01-30  9:07 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelSwap) call gridRemoveThreeFaceCell as
	well as gridRemoveTwoFaceCell to remove cells that would impeed
	projection.
